# EAGLE-halo-membership-tagging

./: README.md
eagle-tag/: README.md  pyproject.toml
eagle-tag-c/src/eagle-tag/: chunking.c  main.c  read_eagle_snapshot.c  write_data.c
eagle-tag-c/src/eagle-tag/headers/: chunking.h  constants.h  read_eagle_membership.h  read_eagle_snapshot.h  write_data.h
eagle-tag/src/eagle_tag/: __about__.py  __init__.py  _eagle_filepaths.py  _load_data_with_xarray.py  _loading_catalogue_data.py  _loading_catalogue_membership.py  _loading_snapshots.py  _reorder_particles.py  _save_aux_file.py  _snapshot_tag.py
eagle-tag/src/eagle_tag/_scripts/: _calculate_reorder.py  _run.py
eagle-tag/tests/: __init__.py
