[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eagle-tag"
dynamic = ["version"]
description = 'Creates an auxiliary file for an EAGLE snapshot (or snipshot) containing the SUBFIND membership information of each particle.'
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Christopher Rowe", email = "chris.rowe19@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "scida",
  "pint",
  "numpy",
  "h5py",
]

[project.urls]
Documentation = "https://github.com/QuasarX1/eagle-tag#readme"
Issues = "https://github.com/QuasarX1/eagle-tag/issues"
Source = "https://github.com/QuasarX1/eagle-tag"

[project.scripts]
eagle-tag = "eagle_tag._scripts._run:main"

[tool.hatch.version]
path = "src/eagle_tag/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.12", "3.13"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/eagle_tag tests}"

[tool.coverage.run]
source_pkgs = ["eagle_tag", "tests"]
branch = true
parallel = true
omit = [
  "src/eagle_tag/__about__.py",
]

[tool.coverage.paths]
eagle_tag = ["src/eagle_tag", "*/eagle-tag/src/eagle_tag"]
tests = ["tests", "*/eagle-tag/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
